# bamboo_experimental

./: .gitignore  README.md  pyproject.toml  todos.md
bamboo/: bamboo_client.py
panda_express/perception/calibrate/: calibrate_external_camera.py
panda_express/perception/zed/: X_WE.npy
panda_express/skills/: grasp_vlm.py  open_cabinet.py  wipe.py
perception/calibrate/: calibrate_wrist_cam.py  camera_to_gripper_extrinsics.npy
perception/realsense/: __init__.py  realsense_cam.py
perception/zed/: README.md  get_intrinsics.py  intrinsics.pkl  zed_cam.py
skills/: go_to_conf.py  grasp.py  push_button.py
